--- a/css/sass/base.scss
+++ b/css/sass/base.scss
@@ -1,5 +1,6 @@
 // fonts
-$font: 'Roboto', sans-serif;
+$font: 'Open Sans', sans-serif;
+$font-heading: 'Montserrat', sans-serif;
 
 // vendor prefix
 @mixin prefix($name, $argument) {
