--- a/css/sass/footer.scss
+++ b/css/sass/footer.scss
@@ -1,204 +1,297 @@
-.foo-content{
-    background: #fff;
-    border-top: 1px solid #e2e2e2;
-    margin-top: 30px;
-    padding: 30px 0;
+.foo-content {
+    background: #ffffff;
+    border-top: 2px solid #7dc9c5;
+    margin-top: 20px;
+    padding: 20px 0;
     
-    h3{
-        color: #8c8c8c;
-        margin-bottom: 20px;
-        text-transform: uppercase;
-        
-        @include typo(1.8rem, 700, $font, 2rem); 
+    .container {
+        max-width: 1200px;
+        margin: 0 auto;
+        padding: 0 15px;
     }
     
-    h5{
-        color: #8c8c8c;
+    h3 {
+        color: #7dc9c5;
+        margin-bottom: 15px;
+        text-transform: uppercase;
+        font-size: 16px;
+        font-weight: 600;
+        border-bottom: 1px solid #e9ecef;
+        padding-bottom: 8px;
+    }
+    
+    h5 {
+        color: #666666;
         margin: 5px 0;
         padding: 0 0 0 5px;
         text-transform: uppercase;
-        
-        @include typo(1rem, 700, $font, 1.5rem);
+        font-size: 14px;
+        font-weight: 600;
     }
     
-    .links-list{
-        
-        li{
-            margin-bottom: 10px;
+    .links-list {
+        li {
+            margin-bottom: 8px;
         }
         
-        a{
-            color: #8c8c8c;
-            display: inline-block; 
+        a {
+            color: #666666;
+            display: inline-block;
+            font-size: 14px;
+            font-weight: 400;
+            text-decoration: none;
+            transition: color 0.3s ease;
             
-            @include typo(1.4rem, 300, $font, 1.6rem);
+            &:hover {
+                color: #28a527;
+            }
         }
     }
     
-    .social-list{
-        
-        .social-list{
-            
-            li{
-                margin-bottom: 15px;
+    .social-list {
+        .social-list {
+            li {
+                margin-bottom: 10px;
             }
             
-            a{
-                display: block;
-                font-size: 1.6rem;
-                line-height: 20px;
+            a {
+                display: flex;
+                align-items: center;
+                font-size: 14px;
+                line-height: 1.4;
+                color: #666666;
+                text-decoration: none;
+                transition: color 0.3s ease;
                 
-                &:hover,
-                &:focus{
+                &:hover {
+                    color: #28a527;
                     text-decoration: none;
                 }
                 
-                img{
+                img {
                     display: inline-block;
-                    margin-right: 5px;
-                    vertical-align: top;
+                    margin-right: 8px;
+                    vertical-align: middle;
+                    width: 20px;
+                    height: 20px;
                 }
             }
         }
     }
     
-    .payment-gateways{
-        
-        @media (min-width: 768px) and (max-width: 991px){
-            clear: left;
-        }
-        
-        .payment-form{
-            padding: 3px;
+    .payment-gateways {
+        .payment-form {
+            padding: 2px;
             
-            img{
-                max-height: 27px;
+            img {
+                max-height: 25px;
+                border-radius: 4px;
             }
         }
         
-        .row{
-            margin-left: -3px;
+        .row {
+            margin-left: -2px;
             margin-right: 0;
         }
         
-        svg{
+        svg {
             max-width: 100%;
         }
         
-        .security-title{
-            margin-top: 20px;
+        .security-title {
+            margin-top: 15px;
         }
     }
     
-    @media screen and (max-width: $sm){
+    // Layout responsivo melhorado
+    .col-sm-6,
+    .col-md-2,
+    .col-md-3,
+    .col-md-4,
+    .col-xs-12 {
+        margin-bottom: 20px;
         
-        .container > div{
-            margin-top: 70px;
+        &:last-child {
+            margin-bottom: 0;
+        }
+    }
+    
+    @media screen and (max-width: 768px) {
+        .container > div {
+            margin-top: 0;
+            margin-bottom: 25px;
             
-            &:first-child{
-                margin-top: 0;
+            &:last-child {
+                margin-bottom: 0;
+            }
+        }
+        
+        // Em mobile, organizar em 2 colunas
+        .col-xs-12 {
+            width: 50%;
+            float: left;
+            
+            &:nth-child(odd) {
+                clear: left;
             }
         }
     }
-}
-
-.foo-payment{
-    max-width: 320px;
-}
-
-.foo-contact{
     
-    @media screen and (min-width: 768px) and (max-width: 992px){
-        margin-bottom: 70px;
+    @media screen and (max-width: 480px) {
+        // Em telas muito pequenas, uma coluna
+        .col-xs-12 {
+            width: 100%;
+            float: none;
+        }
+    }
+}
+
+.foo-payment {
+    max-width: 280px;
+}
+
+.foo-contact {
+    @media screen and (min-width: 768px) and (max-width: 992px) {
+        margin-bottom: 0;
     }
     
-    i{
+    i {
         display: inline-block;
         font-size: 0;
-        height: 36px;
-        margin-right: 10px;
+        height: 30px;
+        margin-right: 8px;
         text-align: center;
         vertical-align: middle;
-        width: 36px;
+        width: 30px;
         
-        @media (min-width: 992px){
+        @media (min-width: 992px) {
             display: none;
         }
         
-        @media (min-width: 1200px){   
+        @media (min-width: 1200px) {   
             display: inline-block;
         }
         
-        @media (max-width: 767px){   
+        @media (max-width: 767px) {   
             display: inline-block;
         }
             
-        &:before{
+        &:before {
             content: '';
             display: inline-block;
-            height: 36px;
+            height: 30px;
             vertical-align: middle;
             width: 1%;
         }
         
-        svg{
+        svg {
             display: inline-block;
-            fill: #9e9e9e;
+            fill: #7dc9c5;
             max-width: 99%;
             vertical-align: middle;
         }
     }
     
-    p{
-        color: #8c8c8c;
+    p {
+        color: #666666;
         display: inline-block;
         vertical-align: middle;
         width: 80%;
-        @include typo(1.4rem, 400, $font, 1.8rem);
+        font-size: 13px;
+        font-weight: 400;
+        line-height: 1.4;
     }
     
-    li{
-        margin-top: 17px;
+    li {
+        margin-top: 12px;
         
-        &:first-child{
+        &:first-child {
             margin-top: 0;
         }
     }
 }
 
-.foo-seals{
-    
-    > li{
-        margin-bottom: 10px;
+.foo-seals {
+    > li {
+        margin-bottom: 8px;
     }
     
-    .seal-ebit{
-        margin-right: 10px;
+    .seal-ebit {
+        margin-right: 8px;
     }
     
-    center{
+    center {
         text-align: left;
     }
     
-    .google-safe{
-        background: #fff;
+    .google-safe {
+        background: #ffffff;
         border-radius: 3px;
         display: inline-block;
         padding: 3px;
-        width: 115px;
+        width: 100px;
     }
 }
 
-.foo-message{
-    background: #fff;
-    color: #8c8c8c;
-    margin: 1px 0 15px;
-    padding: 25px 0;
+.foo-message {
+    background: #f8f9fa;
+    color: #666666;
+    margin: 0;
+    padding: 15px 0;
     text-align: center;
+    border-top: 1px solid #e9ecef;
     
-    @include typo(1.2rem, 400, $font, 1.6rem);
+    font-size: 13px;
+    font-weight: 400;
+    line-height: 1.4;
     
     .message-footer {
-        color: #8c8c8c;
+        color: #666666;
+        max-width: 800px;
+        margin: 0 auto;
+        padding: 0 15px;
     }
+}
+
+// Newsletter no footer
+.news-full {
+    background: #7dc9c5;
+    padding: 15px 0;
+    margin-bottom: 0;
+    
+    .newsletter {
+        max-width: 1200px;
+        margin: 0 auto;
+        padding: 0 15px;
+        
+        h2 {
+            color: #ffffff;
+            font-size: 18px;
+            font-weight: 600;
+            margin-bottom: 10px;
+            text-align: center;
+        }
+        
+        input {
+            border: 1px solid #ffffff !important;
+            color: #333333 !important;
+            border-radius: 20px;
+            padding: 10px 15px;
+        }
+        
+        button {
+            background: #28a527;
+            border: none;
+            border-radius: 20px;
+            color: #ffffff;
+            padding: 10px 20px;
+            font-weight: 600;
+            transition: background-color 0.3s ease;
+            
+            &:hover {
+                background: #1e7e1d;
+            }
+        }
+    }
+}
 }
