--- a/css/sass/new-filter.scss
+++ b/css/sass/new-filter.scss
@@ -66,7 +66,7 @@
         text-transform: uppercase;
         overflow: hidden;
         padding-bottom: 0;
-        font-family: "Roboto",sans-serif;
+        font-family: 'Open Sans', sans-serif;
         font-size: 2.2rem;
         font-weight: 400;
         line-height: 2.4rem;
