--- a/css/theme.css
+++ b/css/theme.css
@@ -77,7 +77,7 @@ a:hover {
 
 input {
     border-radius: 0;
-    font-size: 1.6rem
+    font-size: 14px
 }
 
 .lazy[src*=loading] {
@@ -375,7 +375,9 @@ html .botao-destaque:hover,html .botao-frete:hover,html .botao-indisponivel:hove
 .container {
     background: none;
     float: none;
-    position: static
+    position: static;
+    max-width: 100%;
+    width: 100%
 }
 
 .container2 {
@@ -1090,10 +1092,10 @@ html .botao-destaque:hover,html .botao-frete:hover,html .botao-indisponivel:hove
 }
 
 html,body {
-    font-family: "Roboto",sans-serif;
-    font-size: 10px;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 16px;
     font-weight: 400;
-    line-height: 1
+    line-height: 1.6
 }
 
 .application {
@@ -1104,7 +1106,8 @@ html,body {
 
 @media(min-width: 768px)and (max-width: 991px) {
     .container {
-        width:95%
+        width: 100%;
+        max-width: 100%
     }
 }
 
@@ -1153,8 +1156,8 @@ a,a:hover {
 }
 
 h1,h2,h3,h4,h5,h6 {
-    font-family: "Roboto",sans-serif;
-    font-weight: 400
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600
 }
 
 div[id^=AbaPersonalizada]>.board>br:first-child {
@@ -1162,27 +1165,27 @@ div[id^=AbaPersonalizada]>.board>br:first-child {
 }
 
 .board_htm.description h1,div[id^=AbaPersonalizada] h1 {
-    font-size: 4rem
+    font-size: 36px
 }
 
 .board_htm.description h2,div[id^=AbaPersonalizada] h2 {
-    font-size: 3.5rem
+    font-size: 28px
 }
 
 .board_htm.description h3,div[id^=AbaPersonalizada] h3 {
-    font-size: 3rem
+    font-size: 24px
 }
 
 .board_htm.description h4,div[id^=AbaPersonalizada] h4 {
-    font-size: 2.5rem
+    font-size: 20px
 }
 
 .board_htm.description h5,div[id^=AbaPersonalizada] h5 {
-    font-size: 2rem
+    font-size: 18px
 }
 
 .board_htm.description h6,div[id^=AbaPersonalizada] h6 {
-    font-size: 1.5rem
+    font-size: 16px
 }
 
 .board_htm.description p,div[id^=AbaPersonalizada] p {
@@ -7208,7 +7211,10 @@ div[id^=AbaPersonalizada]>.board>br:first-child {
 
 .sidebar {
     position: relative;
-    z-index: 10
+    z-index: 10;
+    max-width: 260px;
+    width: 260px;
+    flex: 0 0 260px
 }
 
 .sidebar .main-menu {
